--- a/src/main/resources/templates/admin/attribute-value/list.html
+++ b/src/main/resources/templates/admin/attribute-value/list.html
@@ -13,10 +13,10 @@
     <div class="row">
         <div class="col-md-12">
 
-            <a th:href="@{/admin/user/add}" class="btn btn-primary">Thêm User</a>
+            <a th:href="@{/admin/attribute-value/add}" class="btn btn-primary">Thêm Attribute Value</a>
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">Danh sách user</h3>
+                    <h3 class="card-title">Danh sách Attribute Value</h3>
                 </div>
                 <!-- /.card-header -->
                 <div class="card-body">
@@ -24,10 +24,8 @@
                         <thead>
                         <tr>
                             <th style="width: 10px">#</th>
-                            <th>Full Name</th>
-                            <th>Email</th>
-                            <th>Phone</th>
-                            <th>Address</th>
+                            <th>Value</th>
+                            <th>Attribute</th>
                             <th style="width: 40px">Thao tác</th>
                         </tr>
                         </thead>
@@ -38,25 +36,18 @@
                             </td>
 
                             <td>
-                                <div th:text="${item.getFullName()}"></div>
+                                <div th:text="${item.getValue()}"></div>
                             </td>
 
                             <td>
-                                <div th:text="${item.getEmail()}"></div>
+                                <div th:each="attribute:${listAttribute}" th:if="${item.getAttribute_id()} == ${attribute.getId()}"
+                                     th:text="${attribute.getName()}"></div>
                             </td>
 
                             <td>
-                                <div th:text="${item.getPhone()}"></div>
-                            </td>
-
-                            <td>
-                                <div th:text="${item.getAddress()}"></div>
-                            </td>
-
-                            <td>
-                                <a th:href="@{/admin/user/edit(id=${item.getId()})}"
+                                <a th:href="@{/admin/attribute-value/edit(id=${item.getId()})}"
                                    class="btn btn-block btn-warning btn-sm">Sửa</a>
-                                <a th:href="@{/admin/user/delete(id=${item.getId()})}"
+                                <a th:href="@{/admin/attribute-value/delete(id=${item.getId()})}"
                                    class="btn btn-block btn-danger btn-sm"
                                    onclick="return confirm('Are you sure want to delete it?')">Xoá</a>
                             </td>
@@ -77,7 +68,7 @@
                                 th:each="pageNumber:${#numbers.sequence(1, pageResult.getTotalPage())}"
                                 th:attr="class=${pageResult.getActivePage()==pageNumber ? 'active page-item' : 'page-item'}"
                                 th:if="${pageNumber>0}">
-                            <a class="page-link" th:href="@{/admin/user(page=${pageNumber})}"
+                            <a class="page-link" th:href="@{/admin/attribute-value(page=${pageNumber})}"
                                th:text="${pageNumber}"
                             ></a>
                         </li>
