--- a/src/main/resources/templates/admin/attribute/list.html
+++ b/src/main/resources/templates/admin/attribute/list.html
@@ -13,10 +13,10 @@
     <div class="row">
         <div class="col-md-12">
 
-            <a th:href="@{/admin/user/add}" class="btn btn-primary">Thêm User</a>
+            <a th:href="@{/admin/attribute/add}" class="btn btn-primary">Thêm Attribute</a>
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">Danh sách user</h3>
+                    <h3 class="card-title">Danh sách Attribute</h3>
                 </div>
                 <!-- /.card-header -->
                 <div class="card-body">
@@ -24,11 +24,8 @@
                         <thead>
                         <tr>
                             <th style="width: 10px">#</th>
-                            <th>Full Name</th>
-                            <th>Email</th>
-                            <th>Phone</th>
-                            <th>Address</th>
-                            <th style="width: 40px">Thao tác</th>
+                            <th>Role Name</th>
+                            <th style="width: 100px">Thao tác</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -38,54 +35,33 @@
                             </td>
 
                             <td>
-                                <div th:text="${item.getFullName()}"></div>
+                                <div th:text="${item.getName()}"></div>
                             </td>
 
                             <td>
-                                <div th:text="${item.getEmail()}"></div>
-                            </td>
-
-                            <td>
-                                <div th:text="${item.getPhone()}"></div>
-                            </td>
-
-                            <td>
-                                <div th:text="${item.getAddress()}"></div>
-                            </td>
-
-                            <td>
-                                <a th:href="@{/admin/user/edit(id=${item.getId()})}"
+                                <a th:href="@{/admin/attribute/edit(id=${item.getId()})}"
                                    class="btn btn-block btn-warning btn-sm">Sửa</a>
-                                <a th:href="@{/admin/user/delete(id=${item.getId()})}"
+                                <a th:href="@{/admin/attribute/delete(id=${item.getId()})}"
                                    class="btn btn-block btn-danger btn-sm"
-                                   onclick="return confirm('Are you sure want to delete it?')">Xoá</a>
+                                   onclick="return confirm('Are you sure want to delete it?')">Xoá
+                                </a>
                             </td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-                <!-- /.card-body -->
-                <div class="card-footer clearfix">
-                    <ul class="pagination pagination-sm m-0 float-right">
-                        <!--                     <li class="page-item"><a class="page-link" href="#">«</a></li>
-                                             <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                             <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                             <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                             <li class="page-item"><a class="page-link" href="#">»</a></li>-->
 
+                <div class = "card-footer clearfix" >
+                    <ul class="pagination pagination-sm m-0 float-right">
                         <li
                                 th:each="pageNumber:${#numbers.sequence(1, pageResult.getTotalPage())}"
                                 th:attr="class=${pageResult.getActivePage()==pageNumber ? 'active page-item' : 'page-item'}"
                                 th:if="${pageNumber>0}">
-                            <a class="page-link" th:href="@{/admin/user(page=${pageNumber})}"
+                            <a class="page-link" th:href="@{/admin/attribute(page=${pageNumber})}"
                                th:text="${pageNumber}"
                             ></a>
                         </li>
-
                     </ul>
-
-
-
                 </div>
             </div>
             <!-- /.card -->
