--- a/src/main/resources/templates/admin/cart/list.html
+++ b/src/main/resources/templates/admin/cart/list.html
@@ -10,16 +10,17 @@
 <body>
 <div layout:fragment="main-content">
     <!--NOI DUNG O DAY-->
-    <a th:href="@{/admin/product/add}" class="btn btn-primary">Thêm Product</a>
+    <a th:href="@{/admin/product}" class="btn btn-primary">Continue Buy</a>
+    <a th:href="@{/admin/product}" class="btn btn-primary">Send</a>
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Product List</h3>
+            <h3 class="card-title">My Cart</h3>
         </div>
         <!--<img src="@{1618812857992bangioc2-2c842.jpg}" alt="Cinque Terre">-->
         <div class="wrapper">
             <div class="preview">
 
-                <div class="item" th:each="item:${pageResult.getList()}">
+                <div class="item" th:each="item:${listProduct}">
                     <img th:each="image:${listImage}" th:if="${item.getImage_id()} == ${image.getId()}"
                          th:src="@{'/uploads/' + ${image.getPath()}}" alt="Cinque Terre" width="100%" height="40%" />
                     <!--adminlte/dist/img/avatar.png-->
@@ -36,34 +37,6 @@
                         Description:
                         <div th:text="${item.getDescription()}"></div>
                     </form>
-
-                    <form th:each="attribute:${listAttribute}">
-                        <span th:text="${attribute.getName()}"></span><span>: </span>
-                        <span>
-                            <select name="select" id="selects">
-                                <option value="no_select">No Select</option>
-                                <span th:each="attributeValue:${listValue}">
-                                    <span th:if="${attributeValue.getAttribute_id()} == ${attribute.getId()}">
-                                        <option th:text="${attributeValue.getValue()}"></option>
-                                    </span>
-                                </span>
-                            </select>
-                        </span>
-                    </form>
-
-                    <div>
-                        <a th:href="@{/admin/product/edit(id=${item.getId()})}"
-                           class="btn btn-block btn-warning btn-sm" style="float: left; width: 40%; margin: 10px">Sửa</a>
-                        <a th:href="@{/admin/product/delete(id=${item.getId()})}"
-                           class="btn btn-block btn-danger btn-sm"
-                           style="float: left;  width: 40%; margin: 10px"
-                           onclick="return confirm('Are you sure want to delete it?')">Xoá</a>
-                    </div>
-
-                    <div>
-                        <br/>
-                        <a th:href="@{/admin/cart/add(id=${item.getId()})}" class="btn btn-block btn-success" style="width: 80%; margin: 20px; height: 30px">Add To Cart</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -73,7 +46,7 @@
                         th:each="pageNumber:${#numbers.sequence(1, pageResult.getTotalPage())}"
                         th:attr="class=${pageResult.getActivePage()==pageNumber ? 'active page-item' : 'page-item'}"
                         th:if="${pageNumber>0}">
-                    <a class="page-link" th:href="@{/admin/product(page=${pageNumber})}"
+                    <a class="page-link" th:href="@{/admin/cart(page=${pageNumber})}"
                        th:text="${pageNumber}"
                     ></a>
                 </li>
